# agentic-hcm-workflow-engine

./: .env.example  .gitignore  DEMO_TRANSCRIPT.md  LICENSE  README.md  app.py  pyproject.toml
data/: add_synthetic_leaves.py  compliance_rules.json  hr_policy_corpus.txt  mock_api_spec.yaml  policy_index.npz  tech_company_employee_data_1000_with_leave.csv
docs/: ARCHITECTURE_BRIEF.md  KEY_DESIGN_DECISIONS.md
src/: __init__.py  app.py  cli.py  config.py  engine.py  evaluation.py  learning.py  memory.py  models.py  rag.py  state.py  tracing.py  workflow.py
src/agents/: __init__.py  action_agent.py  anomaly_detection_agent.py  compliance_agent.py  policy_agent.py  supervisor_agent.py
src/hcm_engine/: __init__.py  agents.py  cli.py  config.py  engine.py  llm.py  models.py  rag.py  state.py  tools.py  tracing.py
tests/: conftest.py  test_engine.py  test_rag.py  test_self_healing.py  test_tools.py
