[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-hcm-workflow-engine"
version = "0.1.0"
description = "A traceable multi-agent HR workflow engine with grounded policy RAG."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "numpy>=1.26,<3",
  "langgraph>=1.2,<2",
  "pypdf>=5.0,<6",
  "python-dotenv>=1.0,<2",
  "sentence-transformers>=4.1,<6",
  "streamlit>=1.45,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "ruff>=0.11,<1",
]

[project.scripts]
hcm-agent = "cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = [
  "app", "cli", "config", "engine", "evaluation", "learning", "llm", "memory", "models",
  "rag", "state", "tools", "tracing", "workflow"
]
packages = ["agents"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
